--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ gtag('config', 'UA-164116714-1');
 <ul>
 <li><a href="https://youtu.be/x9VuTRM7RTI">YouTube</a>: make socialist and progressive vids (and memes)</li>
 <li><a href="https://www.twitch.tv/socdoneleft">Twitch</a>: stream debates, debunks, and games</li>
-<li>the <a href="https://snakycat.github.io/stinky_right_winger_factsheet.github.io/srf.html">Stinky Rightwinger Factsheet</a>: facts to throw at stinky right-wingers</li>
+<li>the <a href="https://snakycat.github.io/stinky_right_winger_factsheet.github.io/stinky_rightwinger_factsheet.html">Stinky Rightwinger Factsheet</a>: facts to throw at stinky right-wingers</li>
 <li><a href="http://politicurves.org/">PolitiCurves</a>: political ideology quiz based on polling data</li>
 <li>(planned) construct a "LeftTuber Praxis Metric" to measure YouTuber efficacy</li>
 <li>(planned) construct an "Economic Leftism Index" a la the Economic Freedom Index</li>
